--- a/package.json
+++ b/package.json
@@ -3,30 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "json-server": "^0.16.2",
     "formik": "^2.2.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.0",
+    "redux": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "json:server": "json-server --watch ./server/db.json --port 8080"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest",
       "eslint-config-airbnb"
-    ]
+    ],
+    "rules": {
+      "no-console": 0
+    }
   },
   "browserslist": {
     "production": [
@@ -41,6 +50,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
     "eslint-config-airbnb": "^18.2.0"
   }
 }
